# publish-spa-rust-wasm

./: .gitignore  IMPLEMENTATION-STATUS.md
docs/: DEVELOPMENT-STATUS-UPDATE.md  FINAL-STATUS-REPORT.md  HIVE-MIND-FINAL-REPORT.md  PHASE3-COMPLETE.md  PROJECT-COMPLETE.md  SECURITY_FIXES_P0.md  error-handling-implementation.md  error-handling-summary.md  implementation-summary.md
docs/analysis/: EXECUTIVE-SUMMARY.md  OPTIMIZATION-REPORT.md  P0-FIXES-REVIEW.md  README.md  REVIEWER-FINAL-REPORT.md  architecture-review.md  performance-metrics.md  quality-report.md  recommendations.md
docs/research/: algorithm-analysis.md  converter-features.md  requirements.md
docs/testing/: HANDOFF_SUMMARY.md  TESTER_REPORT.md  TESTING_GUIDE.md  TEST_INFRASTRUCTURE_COMPLETE.md  TEST_SUMMARY.md
logseq-publisher-npm/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
logseq-publisher-npm/src/: index.ts
logseq-publisher-rust/: .gitignore  Cargo.toml
logseq-publisher-rust/.claude-flow/metrics/: performance.json  task-metrics.json
logseq-publisher-rust/.github/workflows/: test.yml
logseq-publisher-rust/benches/: graph_bench.rs  parser_bench.rs  wasm_bench.rs
logseq-publisher-rust/src/: exporter.rs  graph.rs  lib.rs  optimizer.rs  parser.rs
logseq-publisher-rust/tests/: README.md  comprehensive_graph_tests.rs  e2e_publishing_tests.rs  edge_case_parser_tests.rs  error_handling_tests.rs  integration_graph_tests.rs  integration_test.rs  performance_regression_tests.rs  unit_parser_tests.rs  wasm_tests.rs
logseq-publisher-rust/tests/fixtures/: complex_nested.md  links_and_tags.md  sample_page.md  simple_page.md  unicode_content.md
publish-spa/: BUILD-SUCCESS.md  CONTRIBUTING.md  Cargo.toml  MISSION-COMPLETE.md  README-WASM.md  VALIDATION-COMPLETE.md  action.yml  bb.edn  benchmark.mjs  build.sh  deps.edn  package-lock.json  package.json  test-full-pipeline.mjs  test-integration.js  test-integration.mjs  test-publish.js  test-simple.cjs  test-wasm-bundler.js  test-wasm-web.js  test-wasm.mjs  validate-html.mjs  verify-api.js
publish-spa/.cargo/: config.toml
publish-spa/.github/workflows/: ci.yml  publish.yml  test.yml
publish-spa/docs/: FILE-IO-IMPLEMENTATION.md  INTEGRATION-TEST-RESULTS.md  MIGRATION.md  README.md  VALIDATION-REPORT.md  VALIDATION-RESULTS.md  VALIDATION-SUMMARY.md  WASM-BUILD-WORKAROUND.md
publish-spa/examples/: advanced.mjs  basic.mjs  browser.html  cli.mjs
publish-spa/scripts/: build-wasm-manual.sh
publish-spa/src/: converter.rs  errors.rs  exporter.rs  graph.rs  lib.rs  parser.rs
publish-spa/test-output/: README.html  app.js  code-examples.html  index.html  orphan.html  page-1.html  page-2.html  style.css
publish-spa/test-output/pages/: api-reference.html  changelog.html  features.html  getting-started.html  index.html
publish-spa/test-output/pages/concepts/: blocks.html  links.html  pages.html
publish-spa/tests/: benchmark.rs  integration_test.rs  node_integration_test.rs
publish-spa/tests/common/: mod.rs
test-graph/: README.md  code-examples.md  index.md  orphan.md  page-1.md  page-2.md
test-graph/assets/: test.txt
test-graph/logseq/: config.edn
test-graph/pages/: index.md  (+4 more)
(+5 files in other folders)
