[package]
name = "logseq-publisher-rust"
version = "0.1.0"
edition = "2021"
authors = ["Logseq Publisher Team"]
description = "High-performance Rust implementation of Logseq graph publisher"
license = "MIT"
repository = "https://github.com/logseq/logseq-publisher-rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Markdown and parsing
pulldown-cmark = "0.11"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph and data structures
petgraph = "0.6"
indexmap = "2.1"

# File system and I/O
walkdir = "2.4"
glob = "0.3"

# Hashing
sha2 = "0.10"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "Performance",
    "PerformanceTiming"
]}

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async support
tokio = { version = "1.35", features = ["full"], optional = true }

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rstest = "0.18"
mockall = "0.12"
wiremock = "0.5"

# Test utilities
pretty_assertions = "1.4"
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"

# Coverage and reporting
# Note: cargo-tarpaulin is installed separately, not as a dependency

# WASM testing
wasm-bindgen-test = "0.3"

[features]
default = []
async = ["tokio"]
wasm = []

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[[bench]]
name = "wasm_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true

[profile.test]
opt-level = 1
