[package]
name = "publish-spa-wasm"
version = "1.0.0"
authors = ["Logseq Team"]
edition = "2021"
description = "Publish a Logseq graph as a Single Page Application (SPA) - Rust WASM implementation"
license = "ISC"
repository = "https://github.com/logseq/publish-spa"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# File system and parsing
regex = "1.10"
pulldown-cmark = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Web APIs
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement"
]}

# Optional: For panic hook
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for size in WASM builds
opt-level = "z"
lto = true
codegen-units = 1
# Don't panic on overflow in release
overflow-checks = false
